@@ -124,62 +124,12 @@ class IIndexSort(Interface):
     def sort(docids, reverse=False, limit=None):
         """Sort document ids sequence using indexed values
         
-        If some of docids are not indexed they are skipped
-        from resulting iterable.
+        If some of docids are not indexed they are skipped from resulting
+        iterable.
         
-        Return a sorted iterable of document ids. Limited by
-        value of the "limit" argument and optionally
-        reversed, using the "reverse" argument.
-        """
-
-class INBest(Interface):
-    """Interface for an N-Best chooser."""
-
-    def add(item, score):
-        """Record that item 'item' has score 'score'.  No return value.
-
-        The N best-scoring items are remembered, where N was passed to
-        the constructor.  'item' can by anything.  'score' should be
-        a number, and larger numbers are considered better.
-        """
-
-    def addmany(sequence):
-        """Like "for item, score in sequence: self.add(item, score)".
-
-        This is simply faster than calling add() len(seq) times.
-        """
-
-    def getbest():
-        """Return the (at most) N best-scoring items as a sequence.
-
-        The return value is a sequence of 2-tuples, (item, score), with
-        the largest score first.  If .add() has been called fewer than
-        N times, this sequence will contain fewer than N pairs.
-        """
-
-    def pop_smallest():
-        """Return and remove the (item, score) pair with lowest score.
-
-        If len(self) is 0, raise IndexError.
-
-        To be cleaer, this is the lowest score among the N best-scoring
-        seen so far.  This is most useful if the capacity of the NBest
-        object is never exceeded, in which case  pop_smallest() allows
-        using the object as an ordinary smallest-in-first-out priority
-        queue.
-        """
-
-    def __len__():
-        """Return the number of (item, score) pairs currently known.
-
-        This is N (the value passed to the constructor), unless .add()
-        has been called fewer than N times.
-        """
-
-    def capacity():
-        """Return the maximum number of (item, score) pairs.
-
-        This is N (the value passed to the constructor).
+        Return a sorted iterable of document ids. Limited by value of the
+        'limit' argument and optionally reversed, using the 'reverse'
+        argument.
         """
 
 class ICatalog(IIndexInjection):
